--- a/package.json
+++ b/package.json
@@ -19,20 +19,21 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
+    "@capacitor/core": "2.4.6",
+    "@capacitor/ios": "^2.4.6",
     "@ionic/angular": "^5.0.0",
+    "cocoapods": "^0.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1101.2",
-    "@angular/cli": "~10.0.5",
+    "@angular-devkit/build-angular": "~0.1002.0",
+    "@angular/cli": "^10.2.1",
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular/language-service": "~10.0.0",
+    "@capacitor/cli": "2.4.6",
     "@ionic/angular-toolkit": "^2.3.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
